# cmake-packages2

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.cmake.in
include/math_lib/: math_lib.h
src/: CMakeLists.txt  math_lib.cpp
test/: CMakeLists.txt  main.cpp
